# rust-cql3-parser

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
src/: aggregate.rs  alter_column.rs  alter_materialized_view.rs  alter_table.rs  alter_type.rs  begin_batch.rs  cassandra_ast.rs  cassandra_statement.rs  common.rs  common_drop.rs  create_function.rs  create_functon.rs  create_index.rs  create_keyspace.rs  create_materialized_view.rs  create_role.rs  create_table.rs  create_trigger.rs  create_type.rs  create_user.rs  delete.rs  drop_trigger.rs  insert.rs  lib.rs  list_role.rs  role_common.rs  select.rs  update.rs
src/cassandra_ast/: aggregate.rs  alter_column.rs  alter_materialized_view.rs  alter_table.rs  alter_type.rs  begin_batch.rs  cassandra_statement.rs  common.rs  common_drop.rs  create_functon.rs  create_keyspace.rs  create_materialized_view.rs  create_role.rs  create_table.rs  create_type.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
