[package]
name = "cql3-parser"
version = "0.1.0"
authors = ["Claude <claude.warren@instaclustr.com>"]
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
itertools = "0.10.1"
regex = "1"
bytes = "1.0.0"
hex = "0.4.3"
num = { version = "0.4.0", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"]}
bigdecimal = {version ="0.3.0", features = ["serde"]}

# Parsers
tree-sitter = "0.20.5"
tree-sitter-cql = { git = "https://github.com/Claude-at-Instaclustr/tree-sitter-cql", branch="main" }


[dev-dependencies]

