[package]
name = "cql3-parser"
version = "0.4.1"
authors = ["Claude <claude.warren@instaclustr.com>"]
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"
description = "A Rust implementation of a CQL3 Parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
itertools = "0.13.0"
bytes = "1.0.0"
hex = "0.4.3"
num-bigint = { version = "0.4.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde"]}
bigdecimal = { version ="0.4.0", features = ["serde"] }
serde = { version = "1.0.111", features = ["derive"] }

# Parsers
tree-sitter = "0.22.6"
tree-sitter-cql = "0.2.0"

[dev-dependencies]

